--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=juicy-notes
-server.servlet.context-path=api/v1
+server.servlet.context-path=/api/v1
 
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/juicy_notes_db
@@ -13,5 +13,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.data-locations=classpath:data-test.sql
